--- a/prototyping/loading-model.ipynb
+++ b/prototyping/loading-model.ipynb
@@ -56,13 +56,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "11574912-a00c-42e4-8721-5065bc426446",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = pathlib.Path('data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8dbb9140-f1b3-4ce8-a022-91b68ea427e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # # TODO: This can be downloaded in parallel.\n",
+    "# # TODO: This can be downloaded in parallel.\n",
     "\n",
-    "data_path = pathlib.Path('data')\n",
     "# data_path.mkdir(exist_ok=True)\n",
     "\n",
     "# data_root = 'https://github.com/RadiotherapyAI/data-tcia-deepmind/raw/61fd2525f9880c8b201758f43c773e515572be92/0522c0659'\n",
