--- a/prototyping/loading-model.ipynb
+++ b/prototyping/loading-model.ipynb
@@ -37,10 +37,10 @@
    "outputs": [],
    "source": [
     "from rai.model import load\n",
-    "from rai.data.images import paths_to_reduced_image_stack\n",
-    "from rai.mask.convert import mask_to_contours\n",
+    "from rai.data.images import paths_to_image_stack_hfs\n",
+    "from rai.mask.convert import contour_sequence_to_masks\n",
     "\n",
-    "from raicontours import cfg"
+    "from raicontours import cfg, TG263"
    ]
   },
   {
@@ -129,8 +129,171 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_grid, y_grid, image_stack = paths_to_reduced_image_stack(image_paths)"
+    "x_grid, y_grid, image_stack, image_uids = paths_to_image_stack_hfs(image_paths)\n",
+    "\n",
+    "\n",
+    "initial_reduce_block_size = cfg[\"reduce_block_sizes\"][0]\n",
+    "\n",
+    "reduced_image_stack = skimage.measure.block_reduce(\n",
+    "    image_stack, block_size=initial_reduce_block_size, func=np.mean\n",
+    ")\n",
+    "reduced_x_grid = skimage.measure.block_reduce(\n",
+    "    x_grid, block_size=initial_reduce_block_size[2], func=np.mean\n",
+    ")\n",
+    "reduced_y_grid = skimage.measure.block_reduce(\n",
+    "    y_grid, block_size=initial_reduce_block_size[1], func=np.mean\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b21d737e-8586-4652-b99a-150dfdb32796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_ds = pydicom.read_file(data_path / \"RS.dcm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4710075-ac40-4e34-a7e6-9d30bd6b47f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_to_number_map = {\n",
+    "    item.ROIName: item.ROINumber for item in structure_ds.StructureSetROISequence\n",
+    "}\n",
+    "\n",
+    "name_to_number_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16c7c96c-e473-4775-908d-fcf9f0c23a3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TG263_to_deepmind_map = {\n",
+    "    TG263.Eye_L: 'Orbit-Lt',\n",
+    "    TG263.Eye_R: 'Orbit-Rt',\n",
+    "    TG263.OpticNrv_L: 'Optic-Nerve-Lt',\n",
+    "    TG263.OpticNrv_R: 'Optic-Nerve-Rt',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "524a4393-5efd-4948-b906-08c3beb09667",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_to_contour_sequence_map = {\n",
+    "    item.ReferencedROINumber: item.ContourSequence for item in structure_ds.ROIContourSequence\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e8677ea-5675-4b2d-90de-c7fb22367ecb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_name_to_contour_sequence_map = {\n",
+    "    structure_name: number_to_contour_sequence_map[name_to_number_map[TG263_to_deepmind_map[structure_name]]] for structure_name in cfg[\"structures\"]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8879570-a466-4bbb-a0c8-b2f0475614c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_name_to_contour_sequence_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca262b25-1f69-4308-9241-48666a54e189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks = []\n",
+    "\n",
+    "for structure_name in cfg[\"structures\"]:\n",
+    "    mask = contour_sequence_to_masks(x_grid, y_grid, image_uids, structure_name_to_contour_sequence_map[structure_name], expansion=4)\n",
+    "    masks.append(mask[..., None])\n",
+    "    \n",
+    "masks = np.concatenate(masks, axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "025231c2-2ea3-4f96-bc7f-e3b3be079114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e83259af-1eea-4cbf-b0c0-c7ab06e8a5bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shrunk_masks =  skimage.measure.block_reduce(\n",
+    "    masks, block_size=(2, 4, 4, 1), func=np.max\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71e1508c-9bef-4bb1-9e0d-e4552afea5e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shrunk_masks.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff7a04e-76bf-48fc-af71-8eae0ecbc3ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# image_uids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "711a36a2-16f5-47b9-b400-8828cffef20a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gt_masks = shrunk_masks[0:64, 32:96, 32:96, :]\n",
+    "gt_masks.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77908478-f0cb-4128-851d-4c3b0f1c3be8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -180,15 +343,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contours = {}\n",
+    "contours_by_structure_pd = {}\n",
+    "contours_by_structure_gt = {}\n",
     "\n",
     "for structure_index, structure_name in enumerate(cfg[\"structures\"]):\n",
-    "    this_structure_mask = model_output[0, ..., structure_index]\n",
+    "    this_structure_pd = model_output[0, ..., structure_index]\n",
+    "    this_structure_gt = gt_masks[..., structure_index]\n",
     "    \n",
-    "    contours_by_slice = []\n",
+    "    contours_by_slice_pd = []\n",
+    "    contours_by_slice_gt = []\n",
     "    for z_index in range(64):\n",
-    "        this_slice_mask = this_structure_mask[z_index, ...]\n",
-    "        contours = mask_to_contours(x_grid, y_grid, this_slice_mask)"
+    "        this_slice_pd = this_structure_pd[z_index, ...]\n",
+    "        this_slice_gt = this_structure_gt[z_index, ...]\n",
+    "        \n",
+    "        contours_pd = mask_to_contours(x_grid, y_grid, this_slice_pd)\n",
+    "        contours_gt = mask_to_contours(x_grid, y_grid, this_slice_gt)\n",
+    "        \n",
+    "        contours_by_slice_pd.append(contours_pd)\n",
+    "        contours_by_slice_gt.append(contours_gt)\n",
+    "        \n",
+    "    contours_by_structure_pd[structure_name] = contours_by_slice_pd\n",
+    "    contours_by_structure_gt[structure_name] = contours_by_slice_gt"
    ]
   },
   {
@@ -197,7 +372,9 @@
    "id": "5738e2b5-fb7f-4e05-8e02-9560fccabfdf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# contours_by_structure_pd"
+   ]
   },
   {
    "cell_type": "code",
