dice calculation running in notebook

--- a/prototyping/loading-model.ipynb
+++ b/prototyping/loading-model.ipynb
@@ -39,6 +39,7 @@
     "from rai.model import load\n",
     "from rai.data.images import paths_to_image_stack_hfs\n",
     "from rai.mask.convert import contour_sequence_to_masks\n",
+    "from rai.metrics.dice import from_contours_by_slice\n",
     "\n",
     "from raicontours import cfg, TG263"
    ]
@@ -382,7 +383,18 @@
    "id": "db4a822a-cd61-47d8-987b-67f17f9b1052",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dice = {}\n",
+    "\n",
+    "for structure_name in cfg[\"structures\"]:\n",
+    "    a = contours_by_structure_pd[structure_name]\n",
+    "    b = contours_by_structure_gt[structure_name]\n",
+    "    \n",
+    "    dice[structure_name] = from_contours_by_slice(a, b)\n",
+    "\n",
+    "\n",
+    "dice"
+   ]
   },
   {
    "cell_type": "code",
