fix bugs in notebook

--- a/prototyping/loading-model.ipynb
+++ b/prototyping/loading-model.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "from rai.model import load\n",
     "from rai.data.images import paths_to_image_stack_hfs\n",
-    "from rai.mask.convert import contour_sequence_to_masks\n",
+    "from rai.mask.convert import contour_sequence_to_masks, mask_to_contours\n",
     "from rai.metrics.dice import from_contours_by_slice\n",
     "\n",
     "from raicontours import cfg, TG263"
@@ -303,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_stack.shape"
+    "reduced_image_stack.shape"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_input = image_stack[None, 0:64, 32:96, 32:96]\n",
+    "model_input = reduced_image_stack[None, 0:64, 32:96, 32:96]\n",
     "model_input.shape"
    ]
   },
@@ -357,8 +357,8 @@
     "        this_slice_pd = this_structure_pd[z_index, ...]\n",
     "        this_slice_gt = this_structure_gt[z_index, ...]\n",
     "        \n",
-    "        contours_pd = mask_to_contours(x_grid, y_grid, this_slice_pd)\n",
-    "        contours_gt = mask_to_contours(x_grid, y_grid, this_slice_gt)\n",
+    "        contours_pd = mask_to_contours(reduced_x_grid, reduced_y_grid, this_slice_pd)\n",
+    "        contours_gt = mask_to_contours(reduced_x_grid, reduced_y_grid, this_slice_gt)\n",
     "        \n",
     "        contours_by_slice_pd.append(contours_pd)\n",
     "        contours_by_slice_gt.append(contours_gt)\n",
@@ -520,18 +520,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_plot_model_result(inference_patch[0, ...], predicted_mask[0, ...])"
+    "_plot_model_result(model_input[0, ...], model_output[0, ...])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7adab009-30e5-48f2-bc6c-79aa83612370",
+   "id": "114dddd8-28ab-4b74-96df-9b5f77a2a3bf",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "predicted_mask.shape"
-   ]
+   "source": []
   }
  ],
  "metadata": {
