pull in point based batches and inference merging

--- a/prototyping/00-loading-model.ipynb
+++ b/prototyping/00-loading-model.ipynb
@@ -133,17 +133,17 @@
     "x_grid, y_grid, image_stack, image_uids = paths_to_image_stack_hfs(image_paths)\n",
     "\n",
     "\n",
-    "initial_reduce_block_size = cfg[\"reduce_block_sizes\"][0]\n",
+    "# initial_reduce_block_size = cfg[\"reduce_block_sizes\"][0]\n",
     "\n",
-    "reduced_image_stack = skimage.measure.block_reduce(\n",
-    "    image_stack, block_size=initial_reduce_block_size, func=np.mean\n",
-    ")\n",
-    "reduced_x_grid = skimage.measure.block_reduce(\n",
-    "    x_grid, block_size=initial_reduce_block_size[2], func=np.mean\n",
-    ")\n",
-    "reduced_y_grid = skimage.measure.block_reduce(\n",
-    "    y_grid, block_size=initial_reduce_block_size[1], func=np.mean\n",
-    ")"
+    "# reduced_image_stack = skimage.measure.block_reduce(\n",
+    "#     image_stack, block_size=initial_reduce_block_size, func=np.mean\n",
+    "# )\n",
+    "# reduced_x_grid = skimage.measure.block_reduce(\n",
+    "#     x_grid, block_size=initial_reduce_block_size[2], func=np.mean\n",
+    "# )\n",
+    "# reduced_y_grid = skimage.measure.block_reduce(\n",
+    "#     y_grid, block_size=initial_reduce_block_size[1], func=np.mean\n",
+    "# )"
    ]
   },
   {
@@ -252,9 +252,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shrunk_masks =  skimage.measure.block_reduce(\n",
-    "    masks, block_size=(2, 4, 4, 1), func=np.max\n",
-    ")"
+    "# shrunk_masks =  skimage.measure.block_reduce(\n",
+    "#     masks, block_size=(2, 4, 4, 1), func=np.max\n",
+    "# )"
    ]
   },
   {
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shrunk_masks.shape"
+    "# shrunk_masks.shape"
    ]
   },
   {
@@ -284,8 +284,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt_masks = shrunk_masks[0:64, 32:96, 32:96, :]\n",
-    "gt_masks.shape"
+    "gt_masks = masks[13:77, 145:209, 224:288, :]\n",
+    "np.max(gt_masks[..., 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bebde73d-32ea-4cc9-ade9-1de9523fcdc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(200 + 155) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b97eb1eb-d322-4c29-9f86-018c45d47849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "177 - 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfcbd041-0fef-4b87-9172-87a5a7fc8ad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "177 + 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cb0e555-2090-4807-9873-d185dd9c65e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(227 + 286) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f224d004-5427-4280-902d-7853aff8074e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(masks[..., 0] == 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6689e1f-8392-4d94-8d2b-abd31bfa7c50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(masks[..., 1] == 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf8462af-cf06-4c83-ba30-dcf27b064174",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(masks[..., 2] == 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04debc14-6ad1-42a0-989b-3f09683ac15a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(masks[..., 3] == 255)"
    ]
   },
   {
@@ -294,7 +374,19 @@
    "id": "77908478-f0cb-4128-851d-4c3b0f1c3be8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "256 - 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "579087cc-1d93-4dcc-bd42-2b3a99ac36a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "256 + 32"
+   ]
   },
   {
    "cell_type": "code",
@@ -303,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_image_stack.shape"
+    "# reduced_image_stack.shape"
    ]
   },
   {
@@ -313,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_input = reduced_image_stack[None, 0:64, 32:96, 32:96]\n",
+    "model_input = image_stack[None, 13:77, 145:209, 224:288]\n",
     "model_input.shape"
    ]
   },
@@ -357,8 +449,8 @@
     "        this_slice_pd = this_structure_pd[z_index, ...]\n",
     "        this_slice_gt = this_structure_gt[z_index, ...]\n",
     "        \n",
-    "        contours_pd = mask_to_contours(reduced_x_grid, reduced_y_grid, this_slice_pd)\n",
-    "        contours_gt = mask_to_contours(reduced_x_grid, reduced_y_grid, this_slice_gt)\n",
+    "        contours_pd = mask_to_contours(x_grid, y_grid, this_slice_pd)\n",
+    "        contours_gt = mask_to_contours(x_grid, y_grid, this_slice_gt)\n",
     "        \n",
     "        contours_by_slice_pd.append(contours_pd)\n",
     "        contours_by_slice_gt.append(contours_gt)\n",
