--- a/prototyping/02-compare-directly.ipynb
+++ b/prototyping/02-compare-directly.ipynb
@@ -41,6 +41,8 @@
     "from rai.mask.convert import contour_sequence_to_masks, mask_to_contours\n",
     "from rai.metrics.dice import from_contours_by_slice\n",
     "\n",
+    "from rai.dicom import structures as _dicom_structures\n",
+    "\n",
     "from rai.inference import batch, merge\n",
     "\n",
     "from raicontours import cfg, TG263"
@@ -286,7 +288,7 @@
     "    this_structure_pd = merged[..., structure_index]\n",
     "    \n",
     "    contours_by_slice_pd = []\n",
-    "    for z_index in range(64):\n",
+    "    for z_index in range(image_stack.shape[0]):\n",
     "        this_slice_pd = this_structure_pd[z_index, ...]\n",
     "        contours_pd = mask_to_contours(x_grid, y_grid, this_slice_pd)\n",
     "        contours_by_slice_pd.append(contours_pd)\n",
@@ -327,16 +329,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dice = {}\n",
+    "contours_by_structure_gt = {}\n",
+    "dice = {}\n",
     "\n",
-    "# for structure_name in cfg[\"structures\"]:\n",
-    "#     a = contours_by_structure_pd[structure_name]\n",
-    "#     b = contours_by_structure_gt[structure_name]\n",
+    "for structure_name in cfg[\"structures\"]:\n",
+    "    contours_by_slice_gt = _dicom_structures.contour_sequence_to_contours_by_slice(\n",
+    "        image_uids, structure_name_to_contour_sequence_map[structure_name], \n",
+    "    )\n",
+    "    contours_by_structure_gt[structure_name] = contours_by_slice_gt\n",
     "    \n",
-    "#     dice[structure_name] = from_contours_by_slice(a, b)\n",
+    "    contours_by_slice_pd = contours_by_structure_pd[structure_name]\n",
+    "\n",
+    "    dice[structure_name] = from_contours_by_slice(contours_by_slice_gt, contours_by_slice_pd)\n",
     "\n",
     "\n",
-    "# dice"
+    "dice"
    ]
   },
   {
@@ -353,7 +360,29 @@
    "id": "53fe318e-a966-4359-9297-0931dd835e95",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "image_stack.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a9ce8a-59b9-4909-b7e5-eb565c2f9548",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(contours_by_structure_gt[TG263.OpticNrv_R])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5a8070e-1c7b-4a10-ba7f-4b08db0fdf8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(contours_by_structure_pd[TG263.OpticNrv_R])"
+   ]
   },
   {
    "cell_type": "code",
@@ -363,14 +392,8 @@
    "outputs": [],
    "source": [
     "def _plot_model_result(\n",
-    "    image_stack, merged_masks\n",
+    "    image_stack, contours_by_structure_gt, contours_by_structure_pd\n",
     "):\n",
-    "    contours_by_slice = _get_contours_by_slice(\n",
-    "        images=image_stack,\n",
-    "        predictions=merged_masks,\n",
-    "    )\n",
-    "\n",
-    "    x = list(range(image_stack.shape[1]))\n",
     "    vmin = 0.2\n",
     "    vmax = 0.4\n",
     "\n",
@@ -379,13 +402,24 @@
     "\n",
     "    axs = []\n",
     "\n",
-    "    for z_index, contours_by_name in contours_by_slice.items():\n",
+    "    for z_index in range(image_stack.shape[0]):\n",
+    "        has_a_contour = False\n",
+    "        \n",
+    "        for structure_name, contours_by_slice in contours_by_structure_pd.items():\n",
+    "            contours = contours_by_slice[z_index]\n",
+    "            if len(contours) > 0:\n",
+    "                has_a_contour = True\n",
+    "                break\n",
+    "                \n",
+    "        if not has_a_contour:\n",
+    "            continue\n",
+    "        \n",
+    "        \n",
     "        fig, ax = plt.subplots()\n",
     "        axs.append(ax)\n",
     "\n",
     "        ax.pcolormesh(\n",
-    "            x,\n",
-    "            x,\n",
+    "            x_grid, y_grid,\n",
     "            image_stack[z_index, :, :],\n",
     "            vmin=vmin,\n",
     "            vmax=vmax,\n",
@@ -393,18 +427,21 @@
     "            cmap=\"gray\",\n",
     "        )\n",
     "\n",
-    "        for structure_name, contours in contours_by_name.items():\n",
+    "        for structure_name, contours_by_slice in contours_by_structure_pd.items():\n",
+    "            contours = contours_by_slice[z_index]\n",
+    "            \n",
     "            for contour in contours:\n",
+    "                contour_array = np.array(contour)\n",
     "                ax.plot(\n",
-    "                    contour[:, 1],\n",
-    "                    contour[:, 0],\n",
+    "                    contour_array[:, 0],\n",
+    "                    contour_array[:, 1],\n",
     "                    label=structure_name.value,\n",
     "                )\n",
     "\n",
-    "                xlim[1] = np.max([np.max(contour[:, 1]), xlim[1]])\n",
-    "                xlim[0] = np.min([np.min(contour[:, 1]), xlim[0]])\n",
-    "                ylim[0] = np.max([np.max(contour[:, 0]), ylim[0]])\n",
-    "                ylim[1] = np.min([np.min(contour[:, 0]), ylim[1]])\n",
+    "                xlim[1] = np.max([np.max(contour_array[:, 0]), xlim[1]])\n",
+    "                xlim[0] = np.min([np.min(contour_array[:, 0]), xlim[0]])\n",
+    "                ylim[0] = np.max([np.max(contour_array[:, 1]), ylim[0]])\n",
+    "                ylim[1] = np.min([np.min(contour_array[:, 1]), ylim[1]])\n",
     "\n",
     "        ax.set_aspect(\"equal\", \"box\")\n",
     "\n",
@@ -431,39 +468,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b911ffad-58f9-4bba-9eb2-b483b34114fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _get_contours_by_slice(\n",
-    "    images, predictions\n",
-    "):\n",
-    "    num_slices = images.shape[0]\n",
-    "    contours_by_slice = collections.defaultdict(dict)\n",
-    "\n",
-    "    for i in range(num_slices):\n",
-    "        for structure_name in cfg[\"structures\"]:\n",
-    "            k = cfg[\"structures\"].index(structure_name)\n",
-    "\n",
-    "            prediction_slice = predictions[i, :, :, k]\n",
-    "\n",
-    "            if np.max(prediction_slice) < 127.5:\n",
-    "                continue\n",
-    "\n",
-    "            contours = skimage.measure.find_contours(prediction_slice, level=127.5)\n",
-    "            contours_by_slice[i][structure_name] = contours\n",
-    "\n",
-    "    return contours_by_slice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ae61abec-4e8d-4180-9608-23a61e843ed6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "_plot_model_result(image_stack, merged)"
+    "_plot_model_result(image_stack, contours_by_structure_gt, contours_by_structure_pd)"
    ]
   },
   {
