create inference test

--- a/prototyping/03-move-to-lib.ipynb
+++ b/prototyping/03-move-to-lib.ipynb
@@ -11,6 +11,7 @@
     "import pathlib\n",
     "import shutil\n",
     "import collections\n",
+    "import itertools\n",
     "import multiprocessing\n",
     "\n",
     "import numpy as np\n",
@@ -45,6 +46,7 @@
     "from rai.dicom import structures as _dicom_structures\n",
     "\n",
     "from rai.inference import batch, merge\n",
+    "from rai.data import download as _data_download\n",
     "\n",
     "from raicontours import cfg, TG263"
    ]
@@ -62,85 +64,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11574912-a00c-42e4-8721-5065bc426446",
+   "id": "9bb7f009-1d50-42d4-84ca-9d1e686b9383",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = pathlib.Path('data')"
+    "image_paths, structure_path = _data_download.example_head_and_neck(\"data\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63eee135-9524-4f9c-b78f-77ed5e3abab8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_url = \"https://github.com/RadiotherapyAI/data-tcia-hnscc-part-3/raw/main/HNSCC-01-0201/10-21-2002-RT%20SIMULATION-79781/1.000000-91247/1-1.dcm\"\n",
-    "structure_path = data_path / \"1-1.dcm\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7836525a-b39b-4ce4-9f50-c4b6091fabfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_filenames = [f\"1-{item:03d}.dcm\" for item in range(1, 177)]\n",
-    "\n",
-    "image_urls = [\n",
-    "    f\"https://github.com/RadiotherapyAI/data-tcia-hnscc-part-3/raw/main/HNSCC-01-0201/10-21-2002-RT%20SIMULATION-79781/2.000000-47027/{filename}\"\n",
-    "    for filename in image_filenames\n",
-    "]\n",
-    "image_paths = [\n",
-    "    data_path / filename\n",
-    "    for filename in image_filenames\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89dcbda2-bc00-4c59-8a5e-f03c5017177e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "urls_to_download = [structure_url] + image_urls\n",
-    "paths_to_save_to = [structure_path] + image_paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afef8196-a839-4f1b-b28d-e0199d0870eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "processes = []\n",
-    "\n",
-    "for url, path in zip(urls_to_download, paths_to_save_to):\n",
-    "    if path.exists():\n",
-    "        continue\n",
-    "        \n",
-    "    p = multiprocessing.Process(\n",
-    "        target=urllib.request.urlretrieve,\n",
-    "        kwargs={\"url\": url, \"filename\": path}\n",
-    "    )\n",
-    "    p.start()\n",
-    "    processes.append(p)\n",
-    "    \n",
-    "for p in processes:\n",
-    "    p.join()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60582a8b-f239-409b-9509-4f1722b1854d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -210,7 +139,7 @@
    "outputs": [],
    "source": [
     "structure_name_to_contour_sequence_map = {\n",
-    "    structure_name: number_to_contour_sequence_map[name_to_number_map[TG263_to_deepmind_map[structure_name]]] for structure_name in TG263_to_deepmind_map.keys()\n",
+    "    structure_name: number_to_contour_sequence_map[name_to_number_map[structure_name]] for structure_name in name_map.keys()\n",
     "}"
    ]
   },
@@ -227,16 +156,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e81e5d12-4d1a-40ce-a776-0bf94d8d8319",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import itertools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b1f5eee5-5fec-4309-b862-879bcaaeeb14",
    "metadata": {},
    "outputs": [],
@@ -248,10 +167,7 @@
     "points = []\n",
     "for point in itertools.product(z, y, x):\n",
     "    point = np.random.randint(-1, 2, size=3) + point\n",
-    "    points.append(tuple(point.tolist()))\n",
-    "\n",
-    "\n",
-    "# points"
+    "    points.append(tuple(point.tolist()))"
    ]
   },
   {
@@ -268,22 +184,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3aedd4c-4d8c-44a5-996d-98b8f33245c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model_input += np.random.normal(size=model_input.shape, scale=0.0001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b1bd2004-0911-47e1-a214-a8fcc87c7bff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model_output = batch.run_batch(model=model, model_input=model_input, max_batch_size=20)\n",
-    "\n",
     "model_output = model.predict(model_input)"
    ]
   },
@@ -334,9 +238,20 @@
    "outputs": [],
    "source": [
     "where_mask = np.where(merged > 127.5)\n",
+    "min_where_mask = np.min(where_mask, axis=1)\n",
+    "max_where_mask = np.max(where_mask, axis=1)\n",
+    "\n",
+    "points_array = np.array(points)\n",
+    "\n",
+    "for i in range(3):\n",
+    "    min_point = np.min(points_array[:, i])\n",
+    "    max_point = np.max(points_array[:, i])\n",
     "    \n",
-    "print(np.min(where_mask, axis=1))\n",
-    "print(np.max(where_mask, axis=1))"
+    "    assert min_point < min_where_mask[i]\n",
+    "    assert max_point > max_where_mask[i]\n",
+    "    \n",
+    "    print(f\"Patch centre points modelled had range of {[min_point, max_point]} which appropriately \"\n",
+    "          f\"encompassed the range of the found masks {[min_where_mask[i], max_where_mask[i]]}\")"
    ]
   },
   {
@@ -406,57 +321,25 @@
     "contours_by_structure_gt = {}\n",
     "dice = {}\n",
     "\n",
-    "for structure_name in cfg[\"structures\"]:\n",
+    "for hnscc_name, tg263_names in name_map.items():\n",
     "    contours_by_slice_gt = _dicom_structures.contour_sequence_to_contours_by_slice(\n",
-    "        image_uids, structure_name_to_contour_sequence_map[structure_name], \n",
+    "        image_uids, structure_name_to_contour_sequence_map[hnscc_name], \n",
     "    )\n",
-    "    contours_by_structure_gt[structure_name] = contours_by_slice_gt\n",
+    "    contours_by_structure_gt[hnscc_name] = contours_by_slice_gt\n",
     "    \n",
-    "    contours_by_slice_pd = contours_by_structure_pd[structure_name]\n",
+    "    contours_by_slice_pd = []\n",
+    "    for z_index, _ in enumerate(image_uids):\n",
+    "        \n",
+    "        contours_for_this_slice = []\n",
+    "        for tg263_name in tg263_names:\n",
+    "            contours_for_this_slice += contours_by_structure_pd[tg263_name][z_index]\n",
+    "            \n",
+    "        contours_by_slice_pd.append(contours_for_this_slice)\n",
     "\n",
-    "    dice[structure_name] = from_contours_by_slice(contours_by_slice_gt, contours_by_slice_pd)\n",
+    "    dice[hnscc_name] = from_contours_by_slice(contours_by_slice_gt, contours_by_slice_pd)\n",
     "\n",
     "\n",
     "dice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaec4080-1441-41ea-9ecb-adeaaf1869ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# {<TG263.Eye_L: 'Eye_L'>: 0.9286226212597871,\n",
-    "#  <TG263.Eye_R: 'Eye_R'>: 0.9334308746033888,\n",
-    "#  <TG263.OpticNrv_L: 'OpticNrv_L'>: 0.6856320902654309,\n",
-    "#  <TG263.OpticNrv_R: 'OpticNrv_R'>: 0.6884461234057949}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39e538d8-3ec1-4f78-a2da-094c60ed935d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# {<TG263.Eye_L: 'Eye_L'>: 0.9276166769047884,\n",
-    "#  <TG263.Eye_R: 'Eye_R'>: 0.9329666079985781,\n",
-    "#  <TG263.OpticNrv_L: 'OpticNrv_L'>: 0.6790198588731543,\n",
-    "#  <TG263.OpticNrv_R: 'OpticNrv_R'>: 0.699842287849424}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f675f3f6-032e-49a4-8628-f2f59a55d805",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# {<TG263.Eye_L: 'Eye_L'>: 0.9270018339944661,\n",
-    "#  <TG263.Eye_R: 'Eye_R'>: 0.9319641570630034,\n",
-    "#  <TG263.OpticNrv_L: 'OpticNrv_L'>: 0.6728881191293525,\n",
-    "#  <TG263.OpticNrv_R: 'OpticNrv_R'>: 0.7000592546884346}"
    ]
   },
   {
@@ -492,12 +375,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0cca4615-e0b3-4f13-8aec-6068159f6dd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg[\"structures\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c088d0b4-0d13-4e02-886e-ac719c3da43e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colours = {\n",
+    "    TG263.Eye_L: \"C0\",\n",
+    "    TG263.Eye_R: \"C1\",\n",
+    "    TG263.OpticNrv_L: \"C2\",\n",
+    "    TG263.OpticNrv_R: \"C3\",\n",
+    "    \"Eyes\": \"C4\",\n",
+    "    \"L Optic Nerve\": \"C5\",\n",
+    "    \"R Optic Nerve\": \"C6\",\n",
+    "}\n",
+    "\n",
+    "labels = {\n",
+    "    TG263.Eye_L: \"RAi Eye_L\",\n",
+    "    TG263.Eye_R: \"RAi Eye_R\",\n",
+    "    TG263.OpticNrv_L: \"RAi OpticNrv_L\",\n",
+    "    TG263.OpticNrv_R: \"RAi OpticNrv_R\",\n",
+    "    \"Eyes\": \"HNSCC Eyes\",\n",
+    "    \"L Optic Nerve\": \"HNSCC OpticNrv_L\",\n",
+    "    \"R Optic Nerve\": \"HNSCC OpticNrv_R\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "440d4534-2c67-4300-ae69-e368aa4e0fc0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def _plot_model_result(\n",
-    "    image_stack, contours_by_structure_gt, contours_by_structure_pd\n",
+    "    image_stack, contours_by_structure, colours, labels\n",
     "):\n",
     "    vmin = 0.2\n",
     "    vmax = 0.4\n",
@@ -510,7 +431,7 @@
     "    for z_index in range(image_stack.shape[0]):\n",
     "        has_a_contour = False\n",
     "        \n",
-    "        for structure_name, contours_by_slice in contours_by_structure_pd.items():\n",
+    "        for structure_name, contours_by_slice in contours_by_structure.items():\n",
     "            contours = contours_by_slice[z_index]\n",
     "            if len(contours) > 0:\n",
     "                has_a_contour = True\n",
@@ -532,19 +453,17 @@
     "            cmap=\"gray\",\n",
     "        )\n",
     "\n",
-    "        for structure_name, contours_by_slice in contours_by_structure_pd.items():\n",
-    "            i = cfg[\"structures\"].index(structure_name)\n",
-    "            colour = f\"C{i}\"\n",
-    "            \n",
+    "        for structure_name, contours_by_slice in contours_by_structure.items():            \n",
     "            contours = contours_by_slice[z_index]\n",
     "            \n",
     "            for contour in contours:\n",
-    "                contour_array = np.array(contour)\n",
+    "                contour_array = np.array(contour + [contour[0]])\n",
+    "                \n",
     "                ax.plot(\n",
     "                    contour_array[:, 0],\n",
     "                    contour_array[:, 1],\n",
-    "                    label=structure_name.value,\n",
-    "                    c=colour,\n",
+    "                    label=labels[structure_name],\n",
+    "                    c=colours[structure_name],\n",
     "                    \n",
     "                )\n",
     "\n",
@@ -583,17 +502,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_plot_model_result(image_stack, contours_by_structure_gt, contours_by_structure_pd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "114dddd8-28ab-4b74-96df-9b5f77a2a3bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Calculate a few patches and merge"
+    "all_contours_by_structure = {\n",
+    "    **contours_by_structure_gt,\n",
+    "    **contours_by_structure_pd,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "_plot_model_result(image_stack, all_contours_by_structure, colours, labels)"
    ]
   }
  ],
