--- a/prototyping/04-deepmind-version.ipynb
+++ b/prototyping/04-deepmind-version.ipynb
@@ -61,14 +61,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_paths, structure_path = _data_download.hnscc_example()\n",
+    "image_paths, structure_path = _data_download.deepmind_example()\n",
     "\n",
     "x_grid, y_grid, image_stack, image_uids = _images_data.paths_to_image_stack_hfs(\n",
     "    image_paths\n",
     ")\n",
     "\n",
     "z = [35, 45, 55]\n",
-    "y = [155, 175, 195, 215, 230]\n",
+    "y = [140, 155, 175, 195, 215, 230]\n",
     "x = [210, 230, 250, 270, 290, 310]\n",
     "\n",
     "masks_pd = _inference.inference_over_jittered_grid(\n",
@@ -99,10 +99,12 @@
    "outputs": [],
    "source": [
     "merge_map = {\n",
-    "    \"Eyes\": [TG263.Eye_L, TG263.Eye_R],\n",
-    "    \"Lens\": [TG263.Lens_L, TG263.Lens_R],\n",
-    "    \"L Optic Nerve\": [TG263.OpticNrv_L],\n",
-    "    \"R Optic Nerve\": [TG263.OpticNrv_R],\n",
+    "    \"Orbit-Lt\": [TG263.Eye_L],\n",
+    "    \"Orbit-Rt\": [TG263.Eye_R],\n",
+    "    \"Lens-Lt\": [TG263.Lens_L],\n",
+    "    \"Lens-Rt\": [TG263.Lens_R],\n",
+    "    \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
+    "    \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
     "}\n",
     "\n",
     "gt_contours_by_structure_hnscc = _dicom_structures.dicom_to_contours_by_structure(\n",
@@ -137,10 +139,12 @@
     "    TG263.Lens_R: \"C3\",\n",
     "    TG263.OpticNrv_L: \"C4\",\n",
     "    TG263.OpticNrv_R: \"C5\",\n",
-    "    \"Eyes\": \"C6\",\n",
-    "    \"Lens\": \"C7\",\n",
-    "    \"L Optic Nerve\": \"C8\",\n",
-    "    \"R Optic Nerve\": \"C9\",\n",
+    "    \"Orbit-Lt\": \"C6\",\n",
+    "    \"Orbit-Rt\": \"C6\",\n",
+    "    \"Lens-Lt\": \"C7\",\n",
+    "    \"Lens-Rt\": \"C7\",\n",
+    "    \"Optic-Nerve-Lt\": \"C8\",\n",
+    "    \"Optic-Nerve-Rt\": \"C9\",\n",
     "}\n",
     "\n",
     "labels = {\n",
@@ -150,10 +154,12 @@
     "    TG263.Lens_R: \"RAi Lens_R\",\n",
     "    TG263.OpticNrv_L: \"RAi OpticNrv_L\",\n",
     "    TG263.OpticNrv_R: \"RAi OpticNrv_R\",\n",
-    "    \"Eyes\": \"HNSCC Eyes\",\n",
-    "    \"Lens\": \"HNSCC Lens\",\n",
-    "    \"L Optic Nerve\": \"HNSCC OpticNrv_L\",\n",
-    "    \"R Optic Nerve\": \"HNSCC OpticNrv_R\",\n",
+    "    \"Orbit-Lt\": \"DeepMind Eye_L\",\n",
+    "    \"Orbit-Rt\": \"DeepMind Eye_R\",\n",
+    "    \"Lens-Lt\": \"DeepMind Lens_L\",\n",
+    "    \"Lens-Rt\": \"DeepMind Lens_R\",\n",
+    "    \"Optic-Nerve-Lt\": \"DeepMind OpticNrv_L\",\n",
+    "    \"Optic-Nerve-Rt\":  \"DeepMind OpticNrv_R\",\n",
     "}"
    ]
   },
@@ -173,14 +179,6 @@
     "    x_grid, y_grid, image_stack, all_contours_by_structure, colours, labels\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1c11608-f509-4cc6-b954-17bc4d40b9c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
