update colours automatically

--- a/prototyping/04-deepmind-version.ipynb
+++ b/prototyping/04-deepmind-version.ipynb
@@ -132,21 +132,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colours = {\n",
-    "    TG263.Eye_L: \"C0\",\n",
-    "    TG263.Eye_R: \"C1\",\n",
-    "    TG263.Lens_L: \"C2\",\n",
-    "    TG263.Lens_R: \"C3\",\n",
-    "    TG263.OpticNrv_L: \"C4\",\n",
-    "    TG263.OpticNrv_R: \"C5\",\n",
-    "    \"Orbit-Lt\": \"C6\",\n",
-    "    \"Orbit-Rt\": \"C6\",\n",
-    "    \"Lens-Lt\": \"C7\",\n",
-    "    \"Lens-Rt\": \"C7\",\n",
-    "    \"Optic-Nerve-Lt\": \"C8\",\n",
-    "    \"Optic-Nerve-Rt\": \"C9\",\n",
-    "}\n",
-    "\n",
     "labels = {\n",
     "    TG263.Eye_L: \"RAi Eye_L\",\n",
     "    TG263.Eye_R: \"RAi Eye_R\",\n",
@@ -160,6 +145,21 @@
     "    \"Lens-Rt\": \"DeepMind Lens_R\",\n",
     "    \"Optic-Nerve-Lt\": \"DeepMind OpticNrv_L\",\n",
     "    \"Optic-Nerve-Rt\":  \"DeepMind OpticNrv_R\",\n",
+    "}\n",
+    "\n",
+    "line_prop = {\n",
+    "    TG263.Eye_L: \"-\",\n",
+    "    TG263.Eye_R: \"-\",\n",
+    "    TG263.Lens_L: \"-\",\n",
+    "    TG263.Lens_R: \"-\",\n",
+    "    TG263.OpticNrv_L: \"-\",\n",
+    "    TG263.OpticNrv_R: \"-\",\n",
+    "    \"Orbit-Lt\": \"--\",\n",
+    "    \"Orbit-Rt\": \"--\",\n",
+    "    \"Lens-Lt\": \"--\",\n",
+    "    \"Lens-Rt\": \"--\",\n",
+    "    \"Optic-Nerve-Lt\": \"--\",\n",
+    "    \"Optic-Nerve-Rt\":  \"--\",\n",
     "}"
    ]
   },
@@ -176,9 +176,25 @@
     "}\n",
     "\n",
     "_display_inference.plot_model_result(\n",
-    "    x_grid, y_grid, image_stack, all_contours_by_structure, colours, labels\n",
+    "    x_grid, y_grid, image_stack, all_contours_by_structure, labels, line_prop\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1631290c-102e-4647-a1e1-aa8d0bed32b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae88632-1943-4e96-8b5e-9f022a6b9a3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
