--- a/prototyping/04-deepmind-version.ipynb
+++ b/prototyping/04-deepmind-version.ipynb
@@ -101,66 +101,30 @@
     "merge_map = {\n",
     "    \"Orbit-Lt\": [TG263.Eye_L],\n",
     "    \"Orbit-Rt\": [TG263.Eye_R],\n",
+    "    \"Lacrimal-Lt\": [TG263.Glnd_Lacrimal_L],\n",
+    "    \"Lacrimal-Rt\": [TG263.Glnd_Lacrimal_R],\n",
     "    \"Lens-Lt\": [TG263.Lens_L],\n",
     "    \"Lens-Rt\": [TG263.Lens_R],\n",
     "    \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
     "    \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
     "}\n",
     "\n",
-    "gt_contours_by_structure_hnscc = _dicom_structures.dicom_to_contours_by_structure(\n",
+    "gt_contours_by_structure_dicom_names = _dicom_structures.dicom_to_contours_by_structure(\n",
     "    ds=structure_ds, image_uids=image_uids, structure_names=merge_map.keys()\n",
     ")\n",
     "\n",
-    "pd_contours_by_structure_hnscc = _merge_contours.merge_contours_by_structure(\n",
+    "pd_contours_by_structure_dicom_names = _merge_contours.merge_contours_by_structure(\n",
     "    pd_contours_by_structure_tg263, merge_map\n",
     ")\n",
     "\n",
     "dice = {}\n",
-    "for hnscc_name in merge_map:\n",
-    "    dice[hnscc_name] = _dice_metric.from_contours_by_slice(\n",
-    "        gt_contours_by_structure_hnscc[hnscc_name],\n",
-    "        pd_contours_by_structure_hnscc[hnscc_name],\n",
+    "for name in merge_map:\n",
+    "    dice[name] = _dice_metric.from_contours_by_slice(\n",
+    "        gt_contours_by_structure_dicom_names[name],\n",
+    "        pd_contours_by_structure_dicom_names[name],\n",
     "    )\n",
     "\n",
     "dice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43b29e3f-dc12-44b4-9448-8559a536c7e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = {\n",
-    "    TG263.Eye_L: \"RAi Eye_L\",\n",
-    "    TG263.Eye_R: \"RAi Eye_R\",\n",
-    "    TG263.Lens_L: \"RAi Lens_L\",\n",
-    "    TG263.Lens_R: \"RAi Lens_R\",\n",
-    "    TG263.OpticNrv_L: \"RAi OpticNrv_L\",\n",
-    "    TG263.OpticNrv_R: \"RAi OpticNrv_R\",\n",
-    "    \"Orbit-Lt\": \"DeepMind Eye_L\",\n",
-    "    \"Orbit-Rt\": \"DeepMind Eye_R\",\n",
-    "    \"Lens-Lt\": \"DeepMind Lens_L\",\n",
-    "    \"Lens-Rt\": \"DeepMind Lens_R\",\n",
-    "    \"Optic-Nerve-Lt\": \"DeepMind OpticNrv_L\",\n",
-    "    \"Optic-Nerve-Rt\":  \"DeepMind OpticNrv_R\",\n",
-    "}\n",
-    "\n",
-    "line_prop = {\n",
-    "    TG263.Eye_L: \"-\",\n",
-    "    TG263.Eye_R: \"-\",\n",
-    "    TG263.Lens_L: \"-\",\n",
-    "    TG263.Lens_R: \"-\",\n",
-    "    TG263.OpticNrv_L: \"-\",\n",
-    "    TG263.OpticNrv_R: \"-\",\n",
-    "    \"Orbit-Lt\": \"--\",\n",
-    "    \"Orbit-Rt\": \"--\",\n",
-    "    \"Lens-Lt\": \"--\",\n",
-    "    \"Lens-Rt\": \"--\",\n",
-    "    \"Optic-Nerve-Lt\": \"--\",\n",
-    "    \"Optic-Nerve-Rt\":  \"--\",\n",
-    "}"
    ]
   },
   {
@@ -172,29 +136,13 @@
    "source": [
     "all_contours_by_structure = {\n",
     "    **pd_contours_by_structure_tg263,\n",
-    "    **gt_contours_by_structure_hnscc,\n",
+    "    **gt_contours_by_structure_dicom_names,\n",
     "}\n",
     "\n",
     "_display_inference.plot_model_result(\n",
-    "    x_grid, y_grid, image_stack, all_contours_by_structure, labels, line_prop\n",
+    "    x_grid, y_grid, image_stack, all_contours_by_structure, merge_map\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1631290c-102e-4647-a1e1-aa8d0bed32b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fae88632-1943-4e96-8b5e-9f022a6b9a3b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
