add notes regarding reusability

--- a/prototyping/04-deepmind-version.ipynb
+++ b/prototyping/04-deepmind-version.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from raicontours import TG263\n",
+    "from raicontours import TG263, model_path\n",
     "\n",
     "from rai.contours import merge as _merge_contours\n",
     "from rai.data import download as _data_download\n",
@@ -52,6 +52,16 @@
     "from rai.inference import main as _inference\n",
     "\n",
     "from rai.display import inference as _display_inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7de4ec9d-719a-4d73-8d94-6f7f1254b103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path"
    ]
   },
   {
@@ -71,13 +81,51 @@
     "y = [140, 155, 175, 195, 215, 230]\n",
     "x = [210, 230, 250, 270, 290, 310]\n",
     "\n",
+    "# TODO: Load model, and pass model in directly (less magical, more re-usable)\n",
     "masks_pd = _inference.inference_over_jittered_grid(\n",
     "    image_stack=image_stack, grid=(z, y, x)\n",
     ")\n",
     "\n",
-    "pd_contours_by_structure_tg263 = _mask_convert.masks_to_contours_by_structure(\n",
+    "# TODO: Pass config directly\n",
+    "pd_contours_by_structure = _mask_convert.masks_to_contours_by_structure(\n",
     "    x_grid, y_grid, masks_pd\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf6f30be-819c-486e-bf18-ed6ef7524e35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_display_inference.plot_model_result(\n",
+    "    x_grid, y_grid, image_stack, pd_contours_by_structure\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "361911d1-a0d2-412b-a1c3-b74a307fe228",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84e64db2-9597-41ca-8642-846064fd8864",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1a1e444-81b1-4832-bdcf-3ba7cd1626ce",
+   "metadata": {},
+   "source": [
+    "## Compare to DICOM-RT Structure"
    ]
   },
   {
@@ -98,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_map = {\n",
+    "align_map = {\n",
     "    \"Orbit-Lt\": [TG263.Eye_L],\n",
     "    \"Orbit-Rt\": [TG263.Eye_R],\n",
     "    \"Lacrimal-Lt\": [TG263.Glnd_Lacrimal_L],\n",
@@ -109,19 +157,19 @@
     "    \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
     "}\n",
     "\n",
-    "gt_contours_by_structure_dicom_names = _dicom_structures.dicom_to_contours_by_structure(\n",
-    "    ds=structure_ds, image_uids=image_uids, structure_names=merge_map.keys()\n",
+    "gt_contours_by_structure = _dicom_structures.dicom_to_contours_by_structure(\n",
+    "    ds=structure_ds, image_uids=image_uids, structure_names=align_map.keys()\n",
     ")\n",
     "\n",
-    "pd_contours_by_structure_dicom_names = _merge_contours.merge_contours_by_structure(\n",
-    "    pd_contours_by_structure_tg263, merge_map\n",
+    "aligned_pd_contours_by_structure = _merge_contours.merge_contours_by_structure(\n",
+    "    pd_contours_by_structure, align_map\n",
     ")\n",
     "\n",
     "dice = {}\n",
-    "for name in merge_map:\n",
+    "for name in align_map:\n",
     "    dice[name] = _dice_metric.from_contours_by_slice(\n",
-    "        gt_contours_by_structure_dicom_names[name],\n",
-    "        pd_contours_by_structure_dicom_names[name],\n",
+    "        gt_contours_by_structure[name],\n",
+    "        aligned_pd_contours_by_structure[name],\n",
     "    )\n",
     "\n",
     "dice"
@@ -135,12 +183,12 @@
    "outputs": [],
    "source": [
     "all_contours_by_structure = {\n",
-    "    **pd_contours_by_structure_tg263,\n",
-    "    **gt_contours_by_structure_dicom_names,\n",
+    "    **pd_contours_by_structure,\n",
+    "    **gt_contours_by_structure,\n",
     "}\n",
     "\n",
     "_display_inference.plot_model_result(\n",
-    "    x_grid, y_grid, image_stack, all_contours_by_structure, merge_map\n",
+    "    x_grid, y_grid, image_stack, all_contours_by_structure, align_map\n",
     ")"
    ]
   }
