--- a/prototyping/04-deepmind-version.ipynb
+++ b/prototyping/04-deepmind-version.ipynb
@@ -14,13 +14,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61b5a624-b16f-4397-b9b7-46b021b26dbd",
+   "id": "c3814c86-8748-471b-bb41-3a31bbd9b869",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pydicom\n",
-    "import matplotlib.pyplot as plt"
+    "import pydicom"
    ]
   },
   {
@@ -37,88 +35,100 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1790e3b3-7022-480c-b53e-86fee30ef52a",
+   "id": "7a9dd35b-cd6e-4fed-b8ed-e9adf3667013",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from raicontours import TG263, model_path\n",
+    "import rai\n",
+    "import raicontours\n",
     "\n",
-    "from rai.contours import merge as _merge_contours\n",
-    "from rai.data import download as _data_download\n",
-    "from rai.data import images as _images_data\n",
-    "from rai.dicom import structures as _dicom_structures\n",
-    "from rai.mask import convert as _mask_convert\n",
-    "from rai.metrics import dice as _dice_metric\n",
-    "from rai.inference import main as _inference\n",
-    "\n",
-    "from rai.display import inference as _display_inference"
+    "from raicontours import TG263"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7de4ec9d-719a-4d73-8d94-6f7f1254b103",
+   "id": "4f6aa26e-e721-416d-96b6-27744c9cc981",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path"
+    "raicontours.cfg"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b48dd95-96a7-44f7-b154-b7804f4ab0c6",
+   "id": "841eee57-9e8e-4fcb-bdcd-d95bef5fa1d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_paths, structure_path = _data_download.deepmind_example()\n",
-    "\n",
-    "x_grid, y_grid, image_stack, image_uids = _images_data.paths_to_image_stack_hfs(\n",
+    "rai_model = rai.load_model(cfg=raicontours.cfg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e53da7c8-a538-4a74-ab2e-861ede4bb1d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_paths, structure_path = rai.download_deepmind_example(\"rai-data\")\n",
+    "structure_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ac235ab-cacb-40ea-91b6-ff45353626e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_grid, y_grid, image_stack, image_uids = rai.paths_to_image_stack_hfs(\n",
     "    image_paths\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b18fc55-6207-4951-8927-6c20cc5ea36f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "z = [35, 45, 55]\n",
     "y = [140, 155, 175, 195, 215, 230]\n",
     "x = [210, 230, 250, 270, 290, 310]\n",
     "\n",
-    "# TODO: Load model, and pass model in directly (less magical, more re-usable)\n",
-    "masks_pd = _inference.inference_over_jittered_grid(\n",
-    "    image_stack=image_stack, grid=(z, y, x)\n",
-    ")\n",
-    "\n",
-    "# TODO: Pass config directly\n",
-    "pd_contours_by_structure = _mask_convert.masks_to_contours_by_structure(\n",
-    "    x_grid, y_grid, masks_pd\n",
+    "predicted_masks = rai.inference_over_jittered_grid(\n",
+    "    model=rai_model, image_stack=image_stack, grid=(z, y, x)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf6f30be-819c-486e-bf18-ed6ef7524e35",
+   "id": "5726c47d-78d3-4db1-b388-0ed972552ede",
    "metadata": {},
    "outputs": [],
    "source": [
-    "_display_inference.plot_model_result(\n",
-    "    x_grid, y_grid, image_stack, pd_contours_by_structure\n",
-    ")"
+    "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
+    "    x_grid, y_grid, predicted_masks\n",
+    ")\n",
+    "\n",
+    "predicted_contours_by_structure.keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "361911d1-a0d2-412b-a1c3-b74a307fe228",
+   "id": "6f1ef46b-9e7e-4128-bddd-8e9ca1d34cec",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84e64db2-9597-41ca-8642-846064fd8864",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "rai.plot_contours_by_structure(\n",
+    "    x_grid, y_grid, image_stack, predicted_contours_by_structure\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d534a41-348c-4422-8132-60d5002130ac",
+   "id": "4b0c7fc0-5e3c-4962-9e5a-30d656661696",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,21 +165,58 @@
     "    \"Lens-Rt\": [TG263.Lens_R],\n",
     "    \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
     "    \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
-    "}\n",
-    "\n",
-    "gt_contours_by_structure = _dicom_structures.dicom_to_contours_by_structure(\n",
-    "    ds=structure_ds, image_uids=image_uids, structure_names=align_map.keys()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb528e9a-b338-4e20-a2ba-3ca6095d044e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_names = list(align_map.keys())\n",
+    "structure_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e85ac24-f3f6-4b60-86ed-c5321f121e61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
+    "    ds=structure_ds, image_uids=image_uids, structure_names=structure_names\n",
     ")\n",
-    "\n",
-    "aligned_pd_contours_by_structure = _merge_contours.merge_contours_by_structure(\n",
-    "    pd_contours_by_structure, align_map\n",
+    "dicom_contours_by_structure.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5cbd665-ec40-4e2c-85fd-1163fda0703f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
+    "    predicted_contours_by_structure, align_map\n",
     ")\n",
-    "\n",
+    "aligned_predicted_contours_by_structure.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a9bf27e-bbb2-4e61-b0af-2609025a3ec8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dice = {}\n",
     "for name in align_map:\n",
-    "    dice[name] = _dice_metric.from_contours_by_slice(\n",
-    "        gt_contours_by_structure[name],\n",
-    "        aligned_pd_contours_by_structure[name],\n",
+    "    dice[name] = rai.dice_from_contours_by_slice(\n",
+    "        dicom_contours_by_structure[name],\n",
+    "        aligned_predicted_contours_by_structure[name],\n",
     "    )\n",
     "\n",
     "dice"
@@ -182,13 +229,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_contours_by_structure = {\n",
-    "    **pd_contours_by_structure,\n",
-    "    **gt_contours_by_structure,\n",
+    "combined_contours_by_structure = {\n",
+    "    **predicted_contours_by_structure,\n",
+    "    **dicom_contours_by_structure,\n",
     "}\n",
     "\n",
-    "_display_inference.plot_model_result(\n",
-    "    x_grid, y_grid, image_stack, all_contours_by_structure, align_map\n",
+    "rai.plot_contours_by_structure(\n",
+    "    x_grid, y_grid, image_stack, combined_contours_by_structure, align_map\n",
     ")"
    ]
   }
