propagate for both repos

--- a/prototyping/04-deepmind-version.ipynb
+++ b/prototyping/04-deepmind-version.ipynb
@@ -48,6 +48,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "58e3bd81-508b-4273-ad19-9cb1cd3905a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rai.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4f6aa26e-e721-416d-96b6-27744c9cc981",
    "metadata": {},
    "outputs": [],
