use released raicontours

--- a/prototyping/04-deepmind-version.ipynb
+++ b/prototyping/04-deepmind-version.ipynb
@@ -18,7 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pydicom"
+    "import pydicom\n",
+    "pydicom.__version__"
    ]
   },
   {
@@ -40,9 +41,7 @@
    "outputs": [],
    "source": [
     "import rai\n",
-    "import raicontours\n",
-    "\n",
-    "from raicontours import TG263"
+    "rai.__version__"
    ]
   },
   {
@@ -52,8 +51,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rai.__version__"
+    "import raicontours\n",
+    "\n",
+    "from raicontours import TG263\n",
+    "\n",
+    "raicontours.__version__"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fb0dae0-9622-4a3d-b004-a437219966a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
